5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1630_2921.log
== TEST (2019-04-02 16:24:41) 
-- CODE:
jogo1 = float(input("Informe o valor do jogo 1: "))
jogo2 = float(input("Informe o valor do jogo 2: "))

descontojogo2 = jogo2 - 25%
total = jog1 + descontojogo2

print (jogo2)
print (total)
-- ERROR:
File "XXXX", line 4
    descontojogo2 = jogo2 - 25%
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:55) 
-- CODE:
jogo1 = float(input("Informe o valor do jogo 1: "))
jogo2 = float(input("Informe o valor do jogo 2: "))

descontojogo2 = jogo2 - (25/100)
total = jog1 + descontojogo2

print (jogo2)
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jog1 + descontojogo2
NameError: name 'jog1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:19) 
-- CODE:
jogo1 = float(input("Informe o valor do jogo 1: "))
jogo2 = float(input("Informe o valor do jogo 2: "))

descontojogo2 = jogo2 - (25/100)
total = jogo1 + descontojogo2

print (jogo2)
print (total)
-- OUTPUT:
89.25
231.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:33) 
-- CODE:
jogo1 = float(input("Informe o valor do jogo 1: "))
jogo2 = float(input("Informe o valor do jogo 2: "))

descontojogo2 = jogo2 * (25/100)
total = jogo1 + descontojogo2

print (jogo2)
print (total)
-- OUTPUT:
89.25
164.6625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:42) 
-- CODE:
jogo1 = float(input("Informe o valor do jogo 1: "))
jogo2 = float(input("Informe o valor do jogo 2: "))

descontojogo2 = jogo2 * (25/100)
total = jogo1 + descontojogo2

print (jogo2)
print (total)
-- OUTPUT:
89.25
164.6625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:27:45) 
-- CODE:
jogo1 = float(input("Informe o valor do jogo 1: "))
jogo2 = float(input("Informe o valor do jogo 2: "))

descontojogo2 = jogo2 * (25/100)
total = jogo1 + descontojogo2

print (jogo2)
print (total)
-- EXECUTION TIME:
0.137483
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
89.25
164.6625
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
109.99
127.4875
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
85.87
123.5875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:27) 
-- CODE:
jogo1 = float(input("Informe o valor do jogo 1: "))
jogo2 = float(input("Informe o valor do jogo 2: "))

valordesjogo2 = jogo2 - (jogo2 * (25/100))
total = jogo1 + valordesjogo2

print (valordesjogo2)
print (total)
-- OUTPUT:
66.9375
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:29:34) 
-- CODE:
jogo1 = float(input("Informe o valor do jogo 1: "))
jogo2 = float(input("Informe o valor do jogo 2: "))

valordesjogo2 = jogo2 - (jogo2 * (25/100))
total = jogo1 + valordesjogo2

print (valordesjogo2)
print (total)
-- EXECUTION TIME:
0.116362
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.2875
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.4825
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.5225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:33) 
-- CODE:
jogo1 = float(input("Informe o valor do jogo 1: "))
jogo2 = float(input("Informe o valor do jogo 2: "))

valordesjogo2 = jogo2 - (jogo2 * (25/100))
total = jogo1 + valordesjogo2

print (round(valordesjogo2, 2)
print (round(total, 2)
-- ERROR:
File "XXXX", line 8
    print (round(total, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:45) 
-- CODE:
jogo1 = float(input("Informe o valor do jogo 1: "))
jogo2 = float(input("Informe o valor do jogo 2: "))

valordesjogo2 = jogo2 - (jogo2 * (25/100))
total = jogo1 + valordesjogo2

print (round(valordesjogo2, 2))
print (round(total, 2))
-- OUTPUT:
66.94
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:30:53) 
-- CODE:
jogo1 = float(input("Informe o valor do jogo 1: "))
jogo2 = float(input("Informe o valor do jogo 2: "))

valordesjogo2 = jogo2 - (jogo2 * (25/100))
total = jogo1 + valordesjogo2

print (round(valordesjogo2, 2))
print (round(total, 2))
-- EXECUTION TIME:
0.13778
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
166.52
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
